[package]
name = "ace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
cbc = "0.1.2"
chrono = "0.4.31"
chrono-tz = "0.8.3"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dotenv = "0.15.0"
env_logger = "0.10.0"
hex = "0.4.3"
home = "0.5.5"
indicatif = "0.17.7"
inquire = "0.6.2"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.18.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
random_str = "0.1.2"
regex = "1.9.6"
reqwest = { version = "0.11.22", features = [
    "cookies",
    "json",
    "rustls-tls",
    "blocking",
], default-features = false }
reqwest_cookie_store = "0.6.0"
scraper = "0.17.1"
sentry = "0.31.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sqlite = "0.31.1"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
