[package]
name = "ace"
version = "0.1.16"
edition = "2021"
description = "A CLI tool for interacting with several contest platforms."
readme = "README.md"
repository = "https://github.com/dianhsu/ace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.74"
cbc = "0.1.2"
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
hex = "0.4.3"
home = "0.5.9"
indicatif = "0.17.7"
inquire = "0.6.2"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
random_str = "0.1.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [
    "cookies",
    "json",
    "rustls-tls",
], default-features = false }
reqwest_cookie_store = "0.6.0"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sqlite = "0.32.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.35.0", features = ["full"] }
